<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorButtonBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill"
        android:gravity="fill">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:gravity="fill">

            <Button
                android:id="@+id/sound1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/colorButtonBackground"
                android:longClickable="true"
                android:onClick="musicOnClick"
                android:tag="aaja_aaja_muh_mein"
                android:text="@string/sound1"
                android:textColor="@color/colorButton"
                android:textColorLink="@color/colorButton" />

            <Button
                android:id="@+id/sound2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sound1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/colorButtonBackground"
                android:longClickable="true"
                android:onClick="musicOnClick"
                android:tag="aur_thodi_der_mei_aa_jata"
                android:text="@string/sound2"
                android:textColor="@color/colorButton"
                android:textColorLink="@color/colorButton" />

            <Button
                android:id="@+id/sound3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sound2"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/colorButtonBackground"
                android:longClickable="true"
                android:onClick="musicOnClick"
                android:tag="bas_itna_hi_bc"
                android:text="@string/sound3"
                android:textColor="@color/colorButton"
                android:textColorLink="@color/colorButton" />

            <Button
                android:id="@+id/sound4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sound3"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/colorButtonBackground"
                android:longClickable="true"
                android:onClick="musicOnClick"
                android:tag="bhagwan_ko_l_farak_ni_padta"
                android:text="@string/sound4"
                android:textColor="@color/colorButton"
                android:textColorLink="@color/colorButton" />

            <Button
                android:id="@+id/sound5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sound4"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/colorButtonBackground"
                android:longClickable="true"
                android:onClick="musicOnClick"
                android:tag="intro_theme"
                android:text="@string/sound5"
                android:textColor="@color/colorButton"
                android:textColorLink="@color/colorButton" />

            <Button
                android:id="@+id/sound6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sound5"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/colorButtonBackground"
                android:longClickable="true"
                android:onClick="musicOnClick"
                android:tag="jaa_k_dekh_record_mein"
                android:text="@string/sound6"
                android:textColor="@color/colorButton"
                android:textColorLink="@color/colorButton" />

            <Button
                android:id="@+id/sound7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sound6"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/colorButtonBackground"
                android:longClickable="true"
                android:onClick="musicOnClick"
                android:tag="l_chhota_h"
                android:text="@string/sound7"
                android:textColor="@color/colorButton"
                android:textColorLink="@color/colorButton" />

            <Button
                android:id="@+id/sound8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sound7"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/colorButtonBackground"
                android:longClickable="true"
                android:onClick="musicOnClick"
                android:tag="marna_hai_kya_bsdk"
                android:text="@string/sound8"
                android:textColor="@color/colorButton"
                android:textColorLink="@color/colorButton" />

            <Button
                android:id="@+id/sound9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sound8"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/colorButtonBackground"
                android:longClickable="true"
                android:onClick="musicOnClick"
                android:tag="sambhal_isko_apne"
                android:text="@string/sound9"
                android:textColor="@color/colorButton"
                android:textColorLink="@color/colorButton" />

            <Button
                android:id="@+id/sound10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sound9"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/colorButtonBackground"
                android:longClickable="true"
                android:onClick="musicOnClick"
                android:tag="tere_ko_kya_lagta_h_main"
                android:text="@string/sound10"
                android:textColor="@color/colorButton"
                android:textColorLink="@color/colorButton" />

            <Button
                android:id="@+id/sound11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sound10"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/colorButtonBackground"
                android:longClickable="true"
                android:onClick="musicOnClick"
                android:tag="teri_maa_star_baap_star"
                android:text="@string/sound11"
                android:textColor="@color/colorButton"
                android:textColorLink="@color/colorButton" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>